# stokes-mobility

./: README.md  main.py  pyproject.toml
notebooks/: mobility-factorisation_fourier.ipynb  mobility-factorisation_spharm.ipynb  mobility-factorisation_svd.ipynb
