[project]
name = "stokes-mobility"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "balltree-erwin>=0.1.0",
    "cython>=3.1.3",
    "jax[cuda12]>=0.7.1",
    "matplotlib>=3.10.5",
    "notebook>=7.4.5",
    "scipy>=1.16.1",
]
